# xdslproject.github.io

./: .gitignore  404.html  Gemfile  Makefile  README.md  _config.yml  beautiful-jekyll-theme.gemspec  feed-updated.xml  feed.xml  feed_json_created.json  feed_json_updated.json  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml  team.md  workshop.md
.github/workflows/: deploy.yaml  jekyll.yml  preview.yml
__old/: beautiful-jekyll-theme.gemspec  notebooks.html  team.md
__old/_posts/: 2021-09-14-iwomp-keynote.md  2023-01-16-hackathon.md  2023-02-25-eth.md  2023-05-09-mlir-workshop.md  2023-05-18-durham-excalibur.md
__old/events/: 2022-europar.md
_includes/: head.html  header.html  nav.html
_layouts/: page.html
_posts/: 2023-01-16-hackathon.md  2023-02-25-siam-cse23.md  2023-05-21-isc.md  2025-01-13-hipeac-announcement.md
about/challenge/: index.html
about/excalibur/: index.html
about/partners/: index.html
assets/css/: beautifuljekyll.css
developers/appdev/: index.html
developers/dsldev/: index.html
docs/: .nav.yml  index.html  index.md  workshop.md
docs/about/: challenge.md  excalibur.md  partners.md
events/: 2025-ASPLOS.md  2025-HiPEAC.md  2025-winter-school.md
news/: index.html
overrides/: home.html
search/: search_index.json
winter-school/: 1_mlir_ir.md  index.md
workshop/: 1_mlir_ir.html  2_traversing_ir.html  3_builders.html  4_ir_gen.html  4_ir_gen_solutions.html  5_rewrites.html  6_rewrite_exercises.html  7_defining_dialects.html  7_defining_dialects_solutions.html  index.html  index.md  riscv_1.html  riscv_2.html
(+62 files in other folders)
